fixed placeholder color in dark mode

--- a/public/index.css
+++ b/public/index.css
@@ -88,6 +88,6 @@ body {
     }
 
     .message::placeholder {
-        color: lightgrey;
+        color: rgb(100, 100, 100);
     }
 }
